--- a/Instagrid v2/InstaGrid/InstaGrid/Base.lproj/Main.storyboard
+++ b/Instagrid v2/InstaGrid/InstaGrid/Base.lproj/Main.storyboard
@@ -26,14 +26,8 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Instagrid" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aDs-z3-Cd5">
-                                <rect key="frame" x="125" y="69" width="143" height="47"/>
+                                <rect key="frame" x="125.33333333333333" y="64.333333333333329" width="142.33333333333337" height="46.666666666666671"/>
                                 <fontDescription key="fontDescription" name="ThirstySoftRegular" family="Thirsty Soft" pointSize="36"/>
-                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Swipe up to share" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TFf-Fl-aPo">
-                                <rect key="frame" x="85.666666666666686" y="221" width="222" height="40"/>
-                                <fontDescription key="fontDescription" name="Delm-Medium" family="Delm" pointSize="36"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
@@ -42,53 +36,64 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxX="YES" heightSizable="YES"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                             </view>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Layout 1" translatesAutoresizingMaskIntoConstraints="NO" id="iLT-w7-rcn">
-                                <rect key="frame" x="46.666666666666657" y="716" width="80" height="80"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" spacing="30" translatesAutoresizingMaskIntoConstraints="NO" id="Bin-Ey-BH6">
+                                <rect key="frame" x="46.666666666666657" y="703" width="300" height="80"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Layout 1" translatesAutoresizingMaskIntoConstraints="NO" id="iLT-w7-rcn">
+                                        <rect key="frame" x="0.0" y="0.0" width="80" height="80"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="80" id="0tb-Zl-dmM"/>
+                                            <constraint firstAttribute="height" constant="80" id="OpL-Ru-EpK"/>
+                                        </constraints>
+                                    </imageView>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Layout 2" translatesAutoresizingMaskIntoConstraints="NO" id="FVb-ks-7Ae">
+                                        <rect key="frame" x="110" y="0.0" width="80" height="80"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="80" id="TuZ-Hw-dsq"/>
+                                            <constraint firstAttribute="height" constant="80" id="vgw-FI-wge"/>
+                                        </constraints>
+                                    </imageView>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Layout 3" translatesAutoresizingMaskIntoConstraints="NO" id="yQq-fd-HiU">
+                                        <rect key="frame" x="220" y="0.0" width="80" height="80"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="80" id="sgU-FE-cW4"/>
+                                        </constraints>
+                                    </imageView>
+                                </subviews>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="80" id="Pff-eI-5kU"/>
-                                    <constraint firstAttribute="width" constant="80" id="Rgv-K9-2Rw"/>
+                                    <constraint firstItem="FVb-ks-7Ae" firstAttribute="leading" secondItem="iLT-w7-rcn" secondAttribute="trailing" constant="30" id="NGU-a1-yWu"/>
+                                    <constraint firstItem="yQq-fd-HiU" firstAttribute="leading" secondItem="FVb-ks-7Ae" secondAttribute="trailing" constant="30" id="Wfc-Z5-OyR"/>
                                 </constraints>
-                            </imageView>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Layout 2" translatesAutoresizingMaskIntoConstraints="NO" id="FVb-ks-7Ae">
-                                <rect key="frame" x="156.66666666666666" y="716.33333333333337" width="80" height="80"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="80" id="Fmn-hy-mDY"/>
-                                    <constraint firstAttribute="width" constant="80" id="y6D-cV-5Pq"/>
-                                </constraints>
-                            </imageView>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" image="Arrow Up" translatesAutoresizingMaskIntoConstraints="NO" id="hZX-wa-pX0">
-                                <rect key="frame" x="186.66666666666666" y="191" width="20" height="20"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="20" id="YwE-LH-5Wb"/>
-                                    <constraint firstAttribute="height" constant="20" id="uuy-Lg-qwA"/>
-                                </constraints>
-                            </imageView>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Layout 3" translatesAutoresizingMaskIntoConstraints="NO" id="yQq-fd-HiU">
-                                <rect key="frame" x="266" y="716" width="80" height="80"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="80" id="IZG-df-bvi"/>
-                                    <constraint firstAttribute="height" constant="80" id="rdy-UA-f8n"/>
-                                </constraints>
-                            </imageView>
+                            </stackView>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="xRj-md-QbG">
+                                <rect key="frame" x="85.666666666666671" y="186" width="221.66666666666663" height="70"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" image="Arrow Up" translatesAutoresizingMaskIntoConstraints="NO" id="hZX-wa-pX0">
+                                        <rect key="frame" x="100.99999999999999" y="0.0" width="20" height="20"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="20" id="YwE-LH-5Wb"/>
+                                            <constraint firstAttribute="height" constant="20" id="uuy-Lg-qwA"/>
+                                        </constraints>
+                                    </imageView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Swipe up to share" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TFf-Fl-aPo">
+                                        <rect key="frame" x="0.0" y="30" width="221.66666666666666" height="40"/>
+                                        <fontDescription key="fontDescription" name="Delm-Medium" family="Delm" pointSize="36"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                            </stackView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" name="InstagridBackround"/>
                         <constraints>
-                            <constraint firstItem="yQq-fd-HiU" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" constant="330" id="4Qq-aR-Pum"/>
-                            <constraint firstItem="aDs-z3-Cd5" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="10" id="77y-7c-A36"/>
-                            <constraint firstItem="FVb-ks-7Ae" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="7pn-4u-xPC"/>
-                            <constraint firstItem="FVb-ks-7Ae" firstAttribute="top" secondItem="M8f-WP-uON" secondAttribute="bottom" constant="140.33333333333326" id="HJT-ea-JET"/>
-                            <constraint firstItem="M8f-WP-uON" firstAttribute="top" secondItem="TFf-Fl-aPo" secondAttribute="bottom" constant="15" id="OUp-nl-r1Z"/>
-                            <constraint firstItem="hZX-wa-pX0" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="TTr-eL-hRv"/>
-                            <constraint firstItem="hZX-wa-pX0" firstAttribute="top" secondItem="aDs-z3-Cd5" secondAttribute="bottom" constant="75" id="ZX1-c5-fvB"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="aDs-z3-Cd5" secondAttribute="trailing" constant="125" id="cSd-Kg-SPm"/>
-                            <constraint firstItem="TFf-Fl-aPo" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="d22-Gc-r7R"/>
-                            <constraint firstItem="FVb-ks-7Ae" firstAttribute="leading" secondItem="iLT-w7-rcn" secondAttribute="trailing" constant="30" id="dpN-ij-Tvt"/>
-                            <constraint firstItem="TFf-Fl-aPo" firstAttribute="top" secondItem="hZX-wa-pX0" secondAttribute="bottom" constant="10" id="kKn-D6-nVv"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="FVb-ks-7Ae" secondAttribute="bottom" constant="21.666666666666742" id="mBW-xY-cV3"/>
-                            <constraint firstItem="iLT-w7-rcn" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" constant="330" id="vsA-Cs-muI"/>
-                            <constraint firstItem="aDs-z3-Cd5" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="125" id="wcX-hf-F99"/>
-                            <constraint firstItem="yQq-fd-HiU" firstAttribute="leading" secondItem="FVb-ks-7Ae" secondAttribute="trailing" constant="30" id="yol-Di-6Jh"/>
+                            <constraint firstItem="Bin-Ey-BH6" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="CFJ-MU-qHL"/>
+                            <constraint firstItem="aDs-z3-Cd5" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="CVO-8A-kU0"/>
+                            <constraint firstItem="M8f-WP-uON" firstAttribute="top" secondItem="xRj-md-QbG" secondAttribute="bottom" constant="20" id="I3o-Zq-V8l"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="Bin-Ey-BH6" secondAttribute="bottom" constant="35" id="QdS-mu-MCf"/>
+                            <constraint firstItem="Bin-Ey-BH6" firstAttribute="top" secondItem="M8f-WP-uON" secondAttribute="bottom" constant="125" id="Y7o-ie-hIX"/>
+                            <constraint firstItem="xRj-md-QbG" firstAttribute="top" secondItem="aDs-z3-Cd5" secondAttribute="bottom" constant="75" id="via-pu-5og"/>
+                            <constraint firstItem="xRj-md-QbG" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="zgI-Jh-m1X"/>
                         </constraints>
                     </view>
                 </viewController>
